Updates from Overleaf

--- a/content.tex
+++ b/content.tex
@@ -314,7 +314,7 @@ Several IDEs, such as Visual Studio and IntelliJ, often use formatting tools tha
   \centering
   \includegraphics [scale=0.9]
   {figures/4.png}
-  \caption{Code snippet with 4-spaces \cite{bauer2017indentations}.}
+  \caption{Code snippet with 4-spaces \cite[p. 14]{bauer2017indentations}}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -322,7 +322,7 @@ Several IDEs, such as Visual Studio and IntelliJ, often use formatting tools tha
   \centering
   \includegraphics [scale=1]
   {figures/8.png}
-  \caption{Code snippet with 8-spaces \cite{bauer2017indentations}.}
+  \caption{Code snippet with 8-spaces \cite[p. 14]{bauer2017indentations}}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -331,7 +331,7 @@ Several IDEs, such as Visual Studio and IntelliJ, often use formatting tools tha
   \centering
   \includegraphics [scale=0.8]
   {figures/indentation_ex.png}
-  \caption{Non–indented and indented Java code snippet \cite{hanenberg2024indentation}.}
+  \caption{Non–indented and indented Java code snippet \cite[p. 4]{hanenberg2024indentation}} 
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -352,8 +352,8 @@ Regarding their length, comments can be defined as line (or also called inline) 
   \centering
   \includegraphics [scale=1]
   {figures/inline.png}
-  \caption{Inline comment }
-  \cite{de2011comment}
+  \caption{Inline comment 
+  \cite{de2011comment}}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -363,8 +363,8 @@ In Figure 2.6 is presented a block comment. The block comments contain one or mo
   \centering
   \includegraphics [scale=1]
   {figures/multiline.png}
-  \caption{Block comment}
-  \cite{de2011comment}
+  \caption{Block comment
+  \cite{de2011comment}}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -372,8 +372,8 @@ In Figure 2.6 is presented a block comment. The block comments contain one or mo
   \centering
   \includegraphics [scale=0.9]
   {figures/javad.png}
-  \caption{JavaDoc comment}
-  \cite{de2011comment}
+  \caption{JavaDoc comment
+  \cite{de2011comment}}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -411,8 +411,8 @@ Regarding to their purpose and placement in code, comments can be categorized in
 }
 
 \end{tikzpicture}
-\caption{Classification of code comments}
-\cite{hassan2022code}
+\caption{Classification of code comments
+\cite{hassan2022code}}
 \label{fig:comment_classification}
 \end{figure}
 
@@ -437,8 +437,8 @@ The length of the comments can influence completeness of the comments \cite{stei
   \centering
   \includegraphics [scale=1]
   {figures/long.png}
-  \caption{Example of a long comment}
-  \cite{steidl2013quality}
+  \caption{Example of a long comment
+  \cite[p. 6]{steidl2013quality}}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -446,8 +446,8 @@ The length of the comments can influence completeness of the comments \cite{stei
   \centering
   \includegraphics [scale=0.9]
   {figures/run1.png}
-  \caption{Example of a short comment}
-  \cite{steidl2013quality}
+  \caption{Example of a short comment
+  \cite[p. 6]{steidl2013quality}}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -495,7 +495,7 @@ The process of program comprehension consists of three elements: knowledge-based
 \begin{figure} [H]
   \centering
   \includegraphics[width=\textwidth]{figures/program_Comprehension_Process.png}
-  \caption{The Program comprehension process}
+  \caption{The Program comprehension process \cite[p. 5]{kadar2021program}}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -564,7 +564,7 @@ This movement lasts from 30ms to 50ms \cite{obaidellah2018survey}. A scan-path i
 \begin{figure} [H]
   \centering
   \includegraphics[scale=1.1]{figures/scanp.png}
-  \caption{Example of scan-path \cite{sharafi2015systematic}}
+  \caption{Example of scan-path \cite[p. 4]{sharafi2015systematic}}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -603,7 +603,7 @@ To indicate the intensity of fixation, colors such as red (highest intensity), o
 \begin{figure} [H]
   \centering
   \includegraphics[scale=0.8]{figures/gaze.png}
-  \caption{Example of gaze plot \cite{blignaut2019visualization}}
+  \caption{Example of gaze plot \cite[p. 9]{blignaut2019visualization}}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -611,7 +611,7 @@ To indicate the intensity of fixation, colors such as red (highest intensity), o
 \begin{figure} [H]
   \centering
   \includegraphics[scale=1]{figures/hm.png}
-  \caption{Example of heatmap \cite{jbara2017programmers}}
+  \caption{Example of heatmap \cite[p. 13]{jbara2017programmers}}
   \label{fig:AnhangsChor}
 \end{figure}
 
@@ -649,14 +649,14 @@ The findings show that confusing code snippets lead to difficulties in code comp
 \begin{figure} [H]
   \centering
   \includegraphics[scale=0.8]{figures/a.png}
-  \caption{Obfuscated code snippet \citet{silva2023evaluating}}
+  \caption{Obfuscated code snippet \cite[p. 5]{silva2023evaluating}}
   \label{fig:AnhangsChor}
 \end{figure}
 
 \begin{figure} [H]
   \centering
   \includegraphics[scale=0.8]{figures/b.png}
-  \caption{Clarified version \citet{silva2023evaluating}}
+  \caption{Clarified version \cite[p. 5]{silva2023evaluating}}
   \label{fig:AnhangsChor}
 \end{figure}
 
