--- a/lmu-thesis-cover.sty
+++ b/lmu-thesis-cover.sty
@@ -83,7 +83,7 @@
     \gdef\@labelStartdate{Commenced}%
     \gdef\@labelEnddate{Completed}%
     \gdef\@labelUniversity{~\newline LMU Munich}%
-    \gdef\@labelDept{Department for Informatics}%
+    \gdef\@labelDept{Department for Informatics, Research group "Technology-Enhanced Learning"}%
 
     %the labels are written in German, because these are the official terms given by the regulations ("Prüfungsordnung")
     %For a detailed discussion see https://github.com/latextemplates/uni-stuttgart-computer-science-cover/pull/10
