--- a/main.tex
+++ b/main.tex
@@ -18,9 +18,9 @@
   institute={Institut für Informatik},
   course={Medieninformatik},
   examiner={Prof. Dr. Sven Strickroth },
-  supervisor={Sigrid Laura Klinger, Thomas Weber},
+  supervisor={Sigrid Laura Klinger, Dr. Thomas Weber},
   startdate={January 13, 2025},
-  enddate={May 26, 2025},
+  enddate={May ..., 2025},
   copyright=ccbysa, % ccbysa, ccbynosa, cc0, none
   language=english
 ]{lmu-thesis-cover}
