--- a/content.tex
+++ b/content.tex
@@ -1055,14 +1055,14 @@ As for Java knowledge, most students rated their skills as average. Only two par
 
 \begin{figure} [H]
   \centering
-  \includegraphics[scale=1.1]{figures/semester.png}
+  \includegraphics[scale=0.8]{figures/semester.png}
   \caption{Participants' semester}
   \label{fig:AnhangsChor}
 \end{figure}
 
 \begin{figure} [H]
   \centering
-  \includegraphics[scale=1]{figures/p_exp.png}
+  \includegraphics[scale=0.8]{figures/p_exp.png}
   \caption{Programming experience of participants}
   \label{fig:AnhangsChor}
 \end{figure}
@@ -1070,7 +1070,7 @@ As for Java knowledge, most students rated their skills as average. Only two par
 
 \begin{figure} [H]
   \centering
-  \includegraphics[scale=1]{figures/java_kn.png}
+  \includegraphics[scale=0.8]{figures/java_kn.png}
   \caption{Java knowledge of participants}
   \label{fig:AnhangsChor}
 \end{figure}
@@ -1082,7 +1082,8 @@ Not all participants answered every question in the study. The questions related
 \section{Statistical analysis}
 
 Regarding the answers for the first question of questionnaire for each code snippet, some participants gave briefly answers, while others gave more detailed ones. The difference in length could have affected the response time. Therefore, the variable Response time per code snippet was not included in the analysis. The dependent variables, such as Comprehension score, Comment quality score, and Indentation quality score, are ordinal, but do not assume equal intervals between the points.
-Since the Mann-Whitney U test is suitable for this type of variables, it is used mainly in this thesis \cite{MacFarland2016}. 
+Since the Mann-Whitney U test is suitable for this type of variables, it is used mainly in this thesis \cite{MacFarland2016}.
+A significance level of \(\alpha = 0.05\) was used for all tests.
 
 \section{Indentation}
 
@@ -1091,7 +1092,7 @@ Since the Mann-Whitney U test is suitable for this type of variables, it is used
 
 Mann-Whitney U test was conducted to investigate whether 4-space indentation improves code readability compared to no indentation. The analysis was based on the Indentation quality score. The hypotheses were defined as:  H0 (Null Hypothesis): The Indentation quality score for the 4-space indented code snippet is less than or equal to that of the unindented code. H1(Alternative Hypothesis): The Indentation quality score for the 4-space indented code snippet is greater than that of the unindented code.
 
-Figure 4.5 presents the medians for both levels of indentation. The test presented a p-value of \(9.172 \times 10^{-8}\), which is below the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H0) was rejected. This result indicates that the Indentation quality score for the 4-space indented code was significantly higher than that for the unindented code. 
+Figure 4.5 presents the medians for both levels of indentation. The test presented a p-value of p < .001, which is below the significance level \(\alpha\). Therefore, H0 was rejected. This result indicates that the Indentation quality score for the 4-space indented code was significantly higher than that for the unindented code. 
 
 \begin{figure} [H]
   \centering
@@ -1105,7 +1106,7 @@ Another Mann-Whitney U test was conducted to investigate whether 4-space indenta
 
 
 Figure 4.6 displays the medians for both levels of indentation. 
-The test produced a p-value of 0.0008, which is below the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H₀) was rejected. The result presented that the Indentation quality score for the 4-space indented code was significantly higher than for the randomly indented code.
+The test produced a p-value of p = .001, which is below the significance level \(\alpha\). Therefore, H0 was rejected. The result presented that the Indentation quality score for the 4-space indented code was significantly higher than for the randomly indented code.
 
 \begin{figure} [H]
   \centering
@@ -1118,7 +1119,7 @@ The test produced a p-value of 0.0008, which is below the significance level \(\
 Another  U test was performed to investigate whether random indentation improves the readability of code compared to code with no indentation. The analysis was based on the Indentation quality score. The hypotheses were defined as:  H0 (Null Hypothesis): The Indentation quality score for the randomly indented code snippet is less than or equal to that of the code snippet with no indentation.  H1(Alternative Hypothesis): The Indentation quality score for the randomly indented code snippet is greater than that of the code snippet with no indentation.
 
 Figure 4.7 visualizes the medians for both levels of indentation. 
-The test presented a p-value of  0.02145, which is less than the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H₀) was rejected. The result reveals that the Indentation quality score for the randomly indented code was significantly higher than that of the unindented code.
+The test presented a p-value of  p = .021, which is less than the significance level \(\alpha \). Therefore, the H0 was rejected. The result reveals that the Indentation quality score for the randomly indented code was significantly higher than that of the unindented code.
 
 \begin{figure} [H]
   \centering
@@ -1132,7 +1133,7 @@ The test presented a p-value of  0.02145, which is less than the significance le
 Another Mann-Whitney U test was conducted to investigate whether random indentation enhance the comprehension  of code compared to code with no indentation. The analysis was based on the Comprehension score. The hypotheses were defined as: H0 (Null Hypothesis): The Comprehension score for the code snippet with no indentation is equal to that of the randomly indented code snippet. H1 (Alternative Hypothesis): The Comprehension score for the code snippet with no indentation is not equal to that of the randomly indented code snippet.
 
 Figure 4.8 displays the medians for both levels of indentation.
-The test produced a p-value of 0.1292, which is greater than the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H0) cannot be rejected. This result indicates that the difference in Comprehension score between the randomly indented and unindented code snippets was not statistically significant.
+The test produced a p-value of p = .129, which is greater than the significance level \(\alpha\). Therefore, H0 cannot be rejected. This result indicates that the difference in Comprehension score between the randomly indented and unindented code snippets was not statistically significant.
 
 
 \begin{figure} [H]
@@ -1148,7 +1149,7 @@ The test produced a p-value of 0.1292, which is greater than the significance le
 \subsection{Confidence rating}
 
 Another Mann-Whitney U test was conducted to investigate whether random indentation improves the code confidence rating compared to code with no indentation. The analysis was based on the Confidence rating, a dependent variable derived from participant responses. The hypotheses were defined as: H0 (Null Hypothesis): The Confidence rating for the code snippet with no indentation is equal to that of the randomly indented code snippet. H1 (Alternative Hypothesis): The Confidence rating for the code snippet with no indentation is not equal to that of the randomly indented code snippet.
-The test produced a p-value of 0.6091, which is greater than the significance level \(\alpha = 0.05\). Therefore, the null hypothesis (H0) cannot be rejected. This result reveals that the difference in Confidence rating between the randomly indented and unindented code snippets was not statistically significant.  Table 4.1 presents an overview of all hypotheses related to the different levels of indentations. 
+The test produced a p-value of p = .609, which is greater than the significance level \(\alpha\). Therefore, H0 cannot be rejected. This result reveals that the difference in Confidence rating between the randomly indented and unindented code snippets was not statistically significant.  Table 4.1 presents an overview of all hypotheses related to the different levels of indentations. 
 \begin{table}[ht]
 \centering
 \small
@@ -1190,7 +1191,7 @@ When participants were asked how they handle code indentation, several answers w
 To explore whether helpful comments improve the comment quality of the code compared to no comments, a Mann-Whitney U test was conducted.  The analysis was based on the Comment quality score. The hypotheses were defined as: H0 (Null Hypothesis): The Comment quality score for the code snippet with helpful comments is less than or equal to that of the code with no comments.  H1 (Alternative Hypothesis): The Comment quality score for the code snippet with helpful comments is greater than that of the code with no comments.
 
 Figure 4.10 shows the medians for both comment formats.
-The test produced a p-value of 3.285e-10, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected. This result reveals that the Comment quality score for the code with helpful comments was significantly higher than that for the code with no comments.
+The test produced a p-value of p < .001, which is below the significance level $\alpha$. Therefore, H0 was rejected. This result reveals that the Comment quality score for the code with helpful comments was significantly higher than that for the code with no comments.
 
 \begin{figure} [H]
   \centering
@@ -1200,17 +1201,17 @@ The test produced a p-value of 3.285e-10, which is below the significance level 
 \end{figure}
 
 
-A Mann-Whitney U test was performed to investigate whether helpful comments improve the comment quality of the code compared to minimal comments. The analysis was based on the Comment quality score. The hypotheses were defined as: H0 (Null Hypothesis): The Comment quality score for the code snippet with helpful comments is less than or equal to that of the code with minimal comments.  H1 (Alternative Hypothesis): The Comment quality score for the code snippet with helpful comments is greater than that of the code with minimal comments. The test resulted in a p-value of 0.02415, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected. This result reveals that the Comment quality score for the code with helpful comments was significantly higher than that for the code with minimal comments.
+A Mann-Whitney U test was performed to investigate whether helpful comments improve the comment quality of the code compared to minimal comments. The analysis was based on the Comment quality score. The hypotheses were defined as: H0 (Null Hypothesis): The Comment quality score for the code snippet with helpful comments is less than or equal to that of the code with minimal comments.  H1 (Alternative Hypothesis): The Comment quality score for the code snippet with helpful comments is greater than that of the code with minimal comments. The test resulted in a p-value of p = .024, which is below the significance level $\alpha $. Therefore, H0 was rejected. This result reveals that the Comment quality score for the code with helpful comments was significantly higher than that for the code with minimal comments.
 
 
 
 
 
-To explore whether helpful comments enhance the comment quality of the code compared to redundant comments, a  U test was conducted.  The analysis was based on the Comment quality score. The hypotheses were defined as: H0 (Null Hypothesis): The Comment quality score for the code snippet with helpful comments is less than or equal to that of the code with redundant comments.  H1 (Alternative Hypothesis): The Comment quality score for the code snippet with helpful comments is greater than that of the code with redundant comments. The test produced a p-value of 0.02155,, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected. This result reveals that the Comment quality score for the code with helpful comments was significantly higher than that for the code with redundant comments. 
+To explore whether helpful comments enhance the comment quality of the code compared to redundant comments, a  U test was conducted.  The analysis was based on the Comment quality score. The hypotheses were defined as: H0 (Null Hypothesis): The Comment quality score for the code snippet with helpful comments is less than or equal to that of the code with redundant comments.  H1 (Alternative Hypothesis): The Comment quality score for the code snippet with helpful comments is greater than that of the code with redundant comments. The test produced a p-value of p = .022, which is below the significance level $\alpha $. Therefore, H0 was rejected. This result reveals that the Comment quality score for the code with helpful comments was significantly higher than that for the code with redundant comments. 
 
 
 
-A Mann-Whitney U test was conducted to investigate whether minimal comments have an impact on the comment quality of the code compared to redundant comments. The analysis was based on the Comment quality score. The hypotheses were defined as: H0 (Null Hypothesis): The Comment quality score for the code snippet with minimal comments is equal to that of the code snippet with redundant comments. H1 (Alternative Hypothesis): The Comment quality score for the code snippet with minimal comments is not equal to that of the code snippet with redundant comments.  The test produced a p-value of 0.6443, which is greater than the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) cannot be rejected. This result reveals that the difference in Comment quality score between minimal comments code snippet and the redundant comments code snippet populations is not big enough to be statistically significant.
+A Mann-Whitney U test was conducted to investigate whether minimal comments have an impact on the comment quality of the code compared to redundant comments. The analysis was based on the Comment quality score. The hypotheses were defined as: H0 (Null Hypothesis): The Comment quality score for the code snippet with minimal comments is equal to that of the code snippet with redundant comments. H1 (Alternative Hypothesis): The Comment quality score for the code snippet with minimal comments is not equal to that of the code snippet with redundant comments.  The test produced a p-value of p =.644, which is greater than the significance level $\alpha$. Therefore, H0 cannot be rejected. This result reveals that the difference in Comment quality score between minimal comments code snippet and the redundant comments code snippet populations is not big enough to be statistically significant.
 
 
 \subsection{Comprehension score}
@@ -1218,7 +1219,7 @@ A U test was conducted to explore whether code snippet with helpful comments imp
 
 
 Figure 4.11 presents the medians for both comments formats.
-The test produced a p-value of  0.0000345, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected.  This result reveals that the Comprehension score for the code with helpful comments was significantly higher than that for the code with no comments. 
+The test produced a p-value of  p < .001, which is below the significance level $\alpha $. Therefore, H0 was rejected.  This result reveals that the Comprehension score for the code with helpful comments was significantly higher than that for the code with no comments. 
 
 
 \begin{figure} [H]
@@ -1234,7 +1235,7 @@ The test produced a p-value of  0.0000345, which is below the significance level
 A U test was performed to investigate whether code snippet with helpful comments improves code comprehension compared to code with minimal comments. The analysis was based on the Comprehension score. The hypotheses were defined as: H0 (Null Hypothesis): The Comprehension score for the code snippet with helpful comments is less than or equal to that of the code with minimal comments.  H1 (Alternative Hypothesis): The Comprehension score for the code snippet with helpful comments is greater than that of the code with minimal comments.
 
 Figure 4.12 displays the medians for both comments formats.
-The test indicates a p-value of 0.00018, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected.  This test reveals that the Comprehension score for the code with helpful comments was significantly higher than that for the code with minimal comments. 
+The test indicates a p-value of p < .001, which is below the significance level $\alpha$. Therefore, H0 was rejected.  This test reveals that the Comprehension score for the code with helpful comments was significantly higher than that for the code with minimal comments. 
 
 \begin{figure} [H]
   \centering
@@ -1248,7 +1249,7 @@ A test was conducted to investigate whether code snippet with redundant comments
 
 
 Figure 4.13 displays the medians for both comments formats.
-The test indicates a p-value of 0.006669, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) can be rejected.  This test reveals that the Comprehension score for the code with redundant comments was significantly higher than that for the code with minimal comments. 
+The test indicates a p-value of p = .007, which is below the significance level $\alpha $. Therefore, H0 can be rejected.  This test reveals that the Comprehension score for the code with redundant comments was significantly higher than that for the code with minimal comments. 
 
 \begin{figure} [H]
   \centering
@@ -1259,19 +1260,19 @@ The test indicates a p-value of 0.006669, which is below the significance level 
 
 
 \subsection{Confidence rating}
-A U test was performed to investigate whether code snippet with helpful comments enhance code confidence compared to code with no comments. The analysis was based on the Confidence rating. The hypotheses were defined as:  H0 (Null Hypothesis): The Confidence rating for the code snippet with helpful comments is less than or equal to that of the code with no comments.  H1 (Alternative Hypothesis): The Confidence rating for the code snippet with helpful comments is greater than that of the code with no comments. The test produced a p-value of  0.000259, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected.  This result reveals that the Confidence rating  for the code with helpful comments was significantly higher than that for the code with no comments. 
+A U test was performed to investigate whether code snippet with helpful comments enhance code confidence compared to code with no comments. The analysis was based on the Confidence rating. The hypotheses were defined as:  H0 (Null Hypothesis): The Confidence rating for the code snippet with helpful comments is less than or equal to that of the code with no comments.  H1 (Alternative Hypothesis): The Confidence rating for the code snippet with helpful comments is greater than that of the code with no comments. The test produced a p-value of   p < .001, which is below the significance level $\alpha$. Therefore, H0 was rejected.  This result reveals that the Confidence rating  for the code with helpful comments was significantly higher than that for the code with no comments. 
 
 
 
-A test was conducted to investigate whether code snippet with helpful comments improves code confidence compared to code with minimal comments. The analysis was based on the Confidence rating. The hypotheses were defined as:  H0 (Null Hypothesis): The Confidence rating for the code snippet with helpful comments is less than or equal to that of the code with minimal comments.  H1 (Alternative Hypothesis): The Confidence rating for the code snippet with helpful comments is greater than that of the code with minimal comments. The test produced a p-value of  0.000114, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected.  This result reveals that the Confidence rating  for the code with helpful comments was significantly higher than that for the code with minimal comments.  
+A test was conducted to investigate whether code snippet with helpful comments improves code confidence compared to code with minimal comments. The analysis was based on the Confidence rating. The hypotheses were defined as:  H0 (Null Hypothesis): The Confidence rating for the code snippet with helpful comments is less than or equal to that of the code with minimal comments.  H1 (Alternative Hypothesis): The Confidence rating for the code snippet with helpful comments is greater than that of the code with minimal comments. The test produced a p-value of   p < .001, which is below the significance level $\alpha$. Therefore, H0 was rejected.  This result reveals that the Confidence rating  for the code with helpful comments was significantly higher than that for the code with minimal comments.  
 
 
 To investigate whether code snippet with redundant comments improves code confidence compared to code with minimal comments, a U test was performed. The analysis was based on the Confidence rating. The hypotheses were defined as:  H0 (Null Hypothesis): The Confidence rating for the code snippet with redundant comments is less than or equal to that of the code with minimal comments.  H1 (Alternative Hypothesis): The Confidence rating for the code snippet with redundant comments is greater than that of the code with minimal comments.      
-The test produced a p-value of  0.00604, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected.  This result suggests that the Confidence rating  for the code with redundant comments was significantly higher than that for the code with minimal comments.   
+The test produced a p-value of  p = .006, which is below the significance level $\alpha $. Therefore, H0 was rejected.  This result suggests that the Confidence rating  for the code with redundant comments was significantly higher than that for the code with minimal comments.   
 
 
 A U test was performed to investigate whether code snippet with redundant comments improves code confidence compared to code without comments. The analysis was based on the Confidence rating. The hypotheses were defined as:  H0 (Null Hypothesis): The Confidence rating for the code snippet with redundant comments is less than or equal to that of the code without comments.  H1 (Alternative Hypothesis): The Confidence rating for the code snippet with redundant comments is greater than that of the code without comments.      
-The test produced a p-value of  0.01059, which is below the significance level $\alpha = 0.05$. Therefore, the null hypothesis (H0) was rejected.  This result suggests that the Confidence rating  for the code with redundant comments was significantly higher than that for the code without comments.   Table 4.2 presents an overview of all hypotheses related to the comment formats.
+The test produced a p-value of  p = .011, which is below the significance level $\alpha $. Therefore, H0 was rejected.  This result suggests that the Confidence rating  for the code with redundant comments was significantly higher than that for the code without comments.   Table 4.2 presents an overview of all hypotheses related to the comment formats.
 
 \begin{table}[ht]
 \centering
@@ -1459,3 +1460,8 @@ This thesis investigated the effects of indentation and comments on code compreh
  
 Despite the valuable insights gained in this thesis, further research is needed. There are several directions for future work.  Future studies should include a larger number of participants to improve the findings´ generalization. Additionally, more complex programming task, for example debugging, could be investigated to provide deeper overview of code comprehension. Another possibility is to combine eye-tracking data with other physiological measures to provide deeper insights into cognitive load during code reading. Sometimes minimal comments were more effective than redundant ones, in other cases, the opposite—this behaviour suggests that the relationship between comment formats and code comprehension is more complex and needs further research.  Moreover, this thesis can be used for computer science education. For example, it can be used for developing tools that focus on improving code comprehension. These tools can be applied in early programming courses. Most CS programs do not pay enough attention to code quality issues in the first year. Therefore, it would be important to teach novices to write functionally correct code as well as high-quality code.   
 
+
+\chapter{Use of Artificial Intelligence}
+\label{sec:ai}
+
+ChatGPT by OpenAI was used to check grammar and improve the clarity of the sentences, as English is not my first language. It was also used to check for errors in programming source code. 
