--- a/bibliography.bib
+++ b/bibliography.bib
@@ -701,3 +701,11 @@ isbn="978-3-319-30634-6",
 doi="10.1007/978-3-319-30634-6_4",
 url="https://doi.org/10.1007/978-3-319-30634-6_4"
 }
+@misc{lmu_programming_lectures,
+  author       = {{LMU München}},
+  title        = {Einführung in die Programmierung [Lecture materials]},
+  howpublished = {Ludwig-Maximilians-Universität München},
+  year         = {2019--2024},
+  note         = {Course materials adapted from the years 2019, 2020, and 2024}
+}
+
